# spinning_cube

./: CMakeLists.txt  main.c  resample.sh
lib/: CMakeLists.txt
lib/obj_parser/: obj_parser.h
src/: CMakeLists.txt  main.c
